A weird viewport-based max-height to prevent having images that don't fit the visible area vertically

--- a/css/theme/source/jetbrains.scss
+++ b/css/theme/source/jetbrains.scss
@@ -56,6 +56,7 @@ section.has-dark-background {
 
 .reveal section img {
   border: none;
+  max-height: 45vh;
 }
 
 @mixin slide-background-template($productName, $beamName: $productName, $beamPosition: 0 0, $logoSize: auto 50px) {
